objects/Apttus__WizardInputControl2__c.object
<CustomObject>
    <description>The individual question, instruction statements and associated field attributes</description>
    <fields>
        <fullName>Apttus__Category__c</fullName>
        <description>Controlling the subcategory field, whose list values shall allow users to search, find, and select Input controls</description>
        <inlineHelpText>Controlling the subcategory field, whose list values shall allow users to search, find, and select Input controls</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ContextObject__c</fullName>
        <description>Business object context, used to filter and align inputs within steps and wizard designs.</description>
        <inlineHelpText>Business object context, used to filter and align inputs within steps and wizard designs.</inlineHelpText>
        <label>Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContextType__c</fullName>
        <description>Type of context, whether its All or Object. 
All means that this input can be used in any step design. 
Object means that this input can be used only in aligned (same object) step design.</description>
        <inlineHelpText>Type of context, whether its All or Object. 
All means that this input can be used in any step design. 
Object means that this input can be used only in aligned (same object) step design.</inlineHelpText>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>For the user to understand the intended use of the Input Control</description>
        <inlineHelpText>For the user to understand the intended use of the Input Control</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__EnableAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether comments and attachments would be allowed in the wizard flow</description>
        <inlineHelpText>Indicates whether comments and attachments would be allowed in the wizard flow</inlineHelpText>
        <label>Allow Comments and Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__FieldClass__c</fullName>
        <description>Wizard Input Field - A field which exists only within the wizard to make determinations 
Object Field - A field which exists only as a salesforce object to make determinations</description>
        <inlineHelpText>Wizard Input Field - A field which exists only within the wizard to make determinations 
Object Field - A field which exists only as a salesforce object to make determinations</inlineHelpText>
        <label>Field Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wizard Input Field</fullName>
                </value>
                <value>
                    <fullName>Object Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__FieldName__c</fullName>
        <description>The Name of the salesforce object field the question applies to</description>
        <inlineHelpText>The Name of the salesforce object field the question applies to</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FieldType__c</fullName>
        <description>Data type of the field</description>
        <inlineHelpText>Data type of the field</inlineHelpText>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>MultiPicklist</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Picklist Radio Button</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>TextArea</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Keywords__c</fullName>
        <description>Additional field for use in search and selection</description>
        <inlineHelpText>Additional field for use in search and selection</inlineHelpText>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__LongQuestion__c</fullName>
        <label>Long Question</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ObjectName__c</fullName>
        <description>The name of the object that qualifies the field the question resolves</description>
        <inlineHelpText>The name of the object that qualifies the field the question resolves</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PicklistValues__c</fullName>
        <description>List of values to be displayed during runtime.</description>
        <inlineHelpText>List of values to be displayed during runtime.</inlineHelpText>
        <label>Picklist Values</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Question__c</fullName>
        <description>The question or instruction statement that is used to direct the end user when completing the wizard after setup. Defaults to Input Label</description>
        <inlineHelpText>The question or instruction statement that is used to direct the end user when completing the wizard after setup. Defaults to Input Label</inlineHelpText>
        <label>Question/Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if an input control value can be edited by the runtime user</description>
        <inlineHelpText>Specifies if an input control value can be edited by the runtime user</inlineHelpText>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that an input value is required for the end user to continue the wizard</description>
        <inlineHelpText>Indicates that an input value is required for the end user to continue the wizard</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__RuntimeHelpText2__c</fullName>
        <description>Describes what the runtime user can see as a help or instruction description of this input control.</description>
        <inlineHelpText>Describes what the runtime user can see as a help or instruction description of this input control.</inlineHelpText>
        <label>Runtime Help Text</label>
        <length>510</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__RuntimeHelpText__c</fullName>
        <description>Describes what the runtime user can see as a help or instruction description of this input control.</description>
        <inlineHelpText>Describes what the runtime user can see as a help or instruction description of this input control.</inlineHelpText>
        <label>Runtime Help Text (OBSOLETE)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>The sequence in which this input entry should be displayed during runtime</description>
        <inlineHelpText>The sequence in which this input entry should be displayed during runtime</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Subcategory__c</fullName>
        <description>Dependent on the category field, whose list values shall allow users to search, find, and select Input Controls</description>
        <inlineHelpText>Dependent on the category field, whose list values shall allow users to search, find, and select Input Controls</inlineHelpText>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__WizardStepId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the step this input control belongs to</description>
        <inlineHelpText>Lookup to the step this input control belongs to</inlineHelpText>
        <label>Wizard Step</label>
        <referenceTo>Apttus__WizardStep2__c</referenceTo>
        <relationshipLabel>Step Inputs</relationshipLabel>
        <relationshipName>StepInputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Input Control</label>
    <nameField>
        <label>Control Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Input Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>